--- a/short_version/pnas.bib
+++ b/short_version/pnas.bib
@@ -83,11 +83,13 @@
 }
 @article{HDP, crossref = {teh2006hierarchical} }
 @article{teh2006hierarchical,
-    title={Hierarchical dirichlet processes},
-    author={Teh, Yee Whye and Jordan, Michael I and Beal, Matthew J and Blei, David M},
-    journal={Journal of the american statistical association},
-    year={2012},
-    publisher={Taylor \& Francis}
+    author = {Yee Whye Teh and Michael I Jordan and Matthew J Beal and David M Blei},
+    title = {Hierarchical {D}irichlet {P}rocesses},
+    journal = {Journal of the American Statistical Association},
+    volume = {101},
+    number = {476},
+    pages = {1566-1581},
+    year = {2006}
 }
 
 @article{goldenberg2010survey,
@@ -163,7 +165,7 @@ publisher={JSTOR}
 }
 @INPROCEEDINGS{yyt_dp, crossref = {teh2010dirichlet} }
 @incollection{teh2010dirichlet,
-title={Dirichlet process},
+title={Dirichlet {P}rocess},
 author={Teh, Yee Whye},
 booktitle={Encyclopedia of machine learning},
 pages={280--287},
@@ -320,14 +322,14 @@ publisher={JSTOR}
   year={1995},
 }
 @incollection{clinchant2008bnb,
-  title={The BNB distribution for text modeling},
+  title={The {BNB} distribution for text modeling},
   author={Clinchant, St{\'e}phane and Gaussier, Eric},
   booktitle={Advances in Information Retrieval},
   pages={150--161},
   year={2008},
 }
 @inproceedings{clinchant2010information,
-  title={Information-based models for ad hoc IR},
+  title={Information-based models for ad hoc {IR}},
   author={Clinchant, St{\'e}phane and Gaussier, Eric},
   booktitle={Proceedings of the 33rd international ACM SIGIR conference on Research and development in information retrieval},
   pages={234--241},
@@ -431,7 +433,7 @@ publisher={JSTOR}
   pages = {440--442},
   title = {Collective dynamics of /`small-world/' networks},
   volume = 393,
-  year = 1998
+  year = {1998}
 }
 
 @article{Blondel2008,                                                                                                                                                                        
