pkdd cls - springer class

--- a/long_version/burstiness.tex
+++ b/long_version/burstiness.tex
@@ -47,7 +47,7 @@ Let $i$ be a node in a social network $G=(V,E)$, and let $d_i$ denote its degree
 The definitions of the different properties based on the burstiness involves inequalities over the degree who are not easy to handle in general. Thus, we study in the following a way to formulate it in a more convenient form. Let us first define an appropriate random structure for exchangeable networks.
 
 \begin{definition}
-	Let $n$ and $N$ be two natural integer such that $N \geq n$. We define the random structure $x^{N,n}$ as a set of $N$ binary value having $n$ elements active (equal to one) and such that $\sum_{i=0}^N P(x^{N,i}) = 1$.
+    Let $n$ and $N$ be two natural integer such that $N \geq n$. We define an ordered sequence $x^{N,n}$ as a tuple of $N$ binary value where the firdt $n$ elements are equal to one and the $N-n$ last are equal to zeros.
 	\label{def:rd_struct}
 \end{definition}
 
