related work dmdk

--- a/PNAS/pnas.bib
+++ b/PNAS/pnas.bib
@@ -22,7 +22,6 @@
     title     = {An Infinite Latent Attribute Model for Network Data},
     booktitle = {Proceedings of the 29th International Conference on Machine Learning, {ICML} 2012, Edinburgh, Scotland, UK, June 26 - July 1, 2012},
     year      = {2012},
-    crossref  = {DBLP:conf/icml/2012},
 }
 
 @inproceedings{ILFRM, crossref = {miller2009nonparametric} }
@@ -34,16 +33,16 @@
   year={2009}
 }
 
-@INPROCEEDINGS{IBP, crossref = {griffiths2011indian} }
+@article{IBP, crossref = {griffiths2011indian} }
 @article{griffiths2011indian,
- author = {Griffiths, Thomas L. and Ghahramani, Zoubin},
- title = {The Indian Buffet Process: An Introduction and Review},
- journal = {J. Mach. Learn. Res.},
- volume = {12},
- month = jul,
- year = {2011},
- pages = {1185--1224},
-} 
+  title={The indian buffet process: An introduction and review},
+  author={Griffiths, Thomas L and Ghahramani, Zoubin},
+  journal={The Journal of Machine Learning Research},
+  volume={12},
+  pages={1185--1224},
+  year={2011},
+  publisher={JMLR. org}
+}
 
 @inproceedings{gorur06,
   title={A choice model with infinitely many latent features},
@@ -243,7 +242,7 @@ publisher={JSTOR}
   year      = {2003},
 }
 
-@article{Liben-Nowell07,
+@article{LibenNowell07,
   author    = {David Liben{-}Nowell and
                Jon M. Kleinberg},
   title     = {The link-prediction problem for social networks},
@@ -309,6 +308,7 @@ publisher={JSTOR}
   author={Barab{\'a}si, Albert-L{\'a}szl{\'o} and Albert, R{\'e}ka},
   journal={Science},
   number={5439},
+  volume={286},
   pages={509--512},
   year={1999},
 }
@@ -336,11 +336,12 @@ publisher={JSTOR}
   year={2010},
 }
 
-@INPROCEEDINGS{AMMSB, crossref = {gopalan2013efficient} }
+@article{AMMSB, crossref = {gopalan2013efficient} }
 @article{gopalan2013efficient,
     title={Efficient discovery of overlapping communities in massive networks},
     author={Gopalan, Prem K and Blei, David M},
     journal={Proceedings of the National Academy of Sciences},
+    volume={110},
     number={36},
     pages={14534--14539},
     year={2013},
@@ -458,5 +459,27 @@ publisher={JSTOR}
     number = {4},
     doi = {10.1371/journal.pone.0122777}
 }        
-
+@article{jacobs2014unified,
+    title={A unified view of generative models for networks: models, methods, opportunities, and challenges},
+    author={Jacobs, Abigail Z and Clauset, Aaron},
+    journal={arXiv preprint arXiv:1411.4070},
+    year={2014}
+}
+@inproceedings{hoff2008modeling,
+    title={Modeling homophily and stochastic equivalence in symmetric relational data},
+    author={Hoff, Peter},
+    booktitle={Advances in Neural Information Processing Systems},
+    pages={657--664},
+    year={2008}
+}
+@article{bickel2009nonparametric,
+    title={A nonparametric view of network models and Newman--Girvan and other modularities},
+    author={Bickel, Peter J and Chen, Aiyou},
+    journal={Proceedings of the National Academy of Sciences},
+    volume={106},
+    number={50},
+    pages={21068--21073},
+    year={2009},
+    publisher={National Acad Sciences}
+}
 
