--- a/long_version/a.bib
+++ b/long_version/a.bib
@@ -1,21 +1,7 @@
-@article{largeron2015,
-    author = {Largeron, Christine AND Mougel, Pierre-Nicolas AND Rabbany, Reihaneh AND Za{\"\i}ane, Osmar R.},
-    journal = {PLoS ONE},
-    publisher = {Public Library of Science},
-    title = {{Generating Attributed Networks with Communities}},
-    year = {2015},
-    month = {04},
-    volume = {10},
-    url = {http://dx.doi.org/10.1371%2Fjournal.pone.0122777},
-    pages = {e0122777},
-    number = {4},
-    doi = {10.1371/journal.pone.0122777}
-}        
-
 @inbook{Easley2010,
   author = {Easley, David and Kleinberg, Jon},
   year = 2010,
-  title = {{Networks, Crowds and Markets: Reasoning about a Highly Connected World}},
+  title = {Networks, Crowds and Markets: Reasoning about a Highly Connected World},
   chapter = {Networks in their Surrounding Contexts},
   publisher = {Cambridge University Press},
   pages={85--118}
@@ -25,7 +11,7 @@
 @inproceedings{meeds2006modeling,
     title={Modeling dyadic data with binary latent factors},
     author={Meeds, Edward and Ghahramani, Zoubin and Neal, Radford M and Roweis, Sam T},
-    booktitle={Advances in neural information processing systems},
+    booktitle={Advances in Neural Information Processing Systems},
     pages={977--984},
     year={2006}
 }
@@ -42,12 +28,12 @@
 @inproceedings{miller2009nonparametric,
   title={Nonparametric latent feature models for link prediction},
   author={Miller, Kurt and Jordan, Michael I and Griffiths, Thomas L},
-  booktitle={Advances in neural information processing systems},
+  booktitle={Advances in Neural Information Processing Systems},
   pages={1276--1284},
   year={2009}
 }
 
-@INPROCEEDINGS{IBP, crossref = {griffiths2011indian} }
+@article{IBP, crossref = {griffiths2011indian} }
 @article{griffiths2011indian,
   title={The indian buffet process: An introduction and review},
   author={Griffiths, Thomas L and Ghahramani, Zoubin},
@@ -96,11 +82,13 @@
 }
 @article{HDP, crossref = {teh2006hierarchical} }
 @article{teh2006hierarchical,
-    title={Hierarchical dirichlet processes},
-    author={Teh, Yee Whye and Jordan, Michael I and Beal, Matthew J and Blei, David M},
-    journal={Journal of the american statistical association},
-    year={2012},
-    publisher={Taylor \& Francis}
+    author = {Yee Whye Teh and Michael I Jordan and Matthew J Beal and David M Blei},
+    title = {Hierarchical {D}irichlet {P}rocesses},
+    journal = {Journal of the American Statistical Association},
+    volume = {101},
+    number = {476},
+    pages = {1566-1581},
+    year = {2006}
 }
 
 @article{goldenberg2010survey,
@@ -176,7 +164,7 @@ publisher={JSTOR}
 }
 @INPROCEEDINGS{yyt_dp, crossref = {teh2010dirichlet} }
 @incollection{teh2010dirichlet,
-title={Dirichlet process},
+title={Dirichlet {P}rocess},
 author={Teh, Yee Whye},
 booktitle={Encyclopedia of machine learning},
 pages={280--287},
@@ -207,23 +195,18 @@ publisher={JSTOR}
     bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
+%%% From Christine pp.
 @inproceedings{LeskovecBKT08,
   author    = {Jure Leskovec and
                Lars Backstrom and
                Ravi Kumar and
                Andrew Tomkins},
   title     = {Microscopic evolution of social networks},
-  booktitle = {Proceedings of the 14th {ACM} {SIGKDD} International Conference on
+  booktitle = {Proceedings of the 14th International Conference on
                Knowledge Discovery and Data Mining, Las Vegas, Nevada, USA, August
                24-27, 2008},
   pages     = {462--470},
   year      = {2008},
-  crossref  = {DBLP:conf/kdd/2008},
-  url       = {http://doi.acm.org/10.1145/1401890.1401948},
-  doi       = {10.1145/1401890.1401948},
-  timestamp = {Mon, 14 May 2012 09:20:40 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/kdd/LeskovecBKT08},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
 @proceedings{DBLP:conf/kdd/2008,
@@ -255,28 +238,17 @@ publisher={JSTOR}
   author    = {Albert{-}L{\'{a}}szl{\'{o}} Barab{\'{a}}si},
   title     = {Linked - how everything is connected to everything else and what it
                means for business, science, and everyday life},
-  publisher = {Plume},
+  publisher = "{Plume}",
   year      = {2003},
-  isbn      = {978-0-452-28439-5},
-  timestamp = {Thu, 14 Apr 2011 14:43:21 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/books/daglib/0012457},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
-@article{Liben-Nowell07,
+@article{LibenNowell07,
   author    = {David Liben{-}Nowell and
                Jon M. Kleinberg},
   title     = {The link-prediction problem for social networks},
   journal   = {{JASIST}},
-  volume    = {58},
-  number    = {7},
   pages     = {1019--1031},
   year      = {2007},
-  url       = {http://dx.doi.org/10.1002/asi.20591},
-  doi       = {10.1002/asi.20591},
-  timestamp = {Mon, 26 Nov 2007 12:58:23 +0100},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/jasis/Liben-NowellK07},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 @incollection{HassanZaki11,
   author    = {Mohammad Al Hasan and
@@ -323,22 +295,22 @@ publisher={JSTOR}
   year={1954}
 }
 @inproceedings{la2010randomization,
-  title={Randomization tests for distinguishing social influence and homophily effects},
-  author={La Fond, Timothy and Neville, Jennifer},
-  booktitle={Proceedings of the 19th international conference on World wide web},
-  pages={601--610},
-  year={2010},
-  organization={ACM}
-}
+ author = {La Fond, Timothy and Neville, Jennifer},
+ title = {Randomization Tests for Distinguishing Social Influence and Homophily Effects},
+ booktitle = {Proceedings of the 19th International Conference on World Wide Web},
+ series = {WWW '10},
+ year = {2010},
+ pages = {601--610},
+} 
+
 @article{barabasi1999emergence,
   title={Emergence of scaling in random networks},
   author={Barab{\'a}si, Albert-L{\'a}szl{\'o} and Albert, R{\'e}ka},
-  journal={science},
-  volume={286},
+  journal={Science},
   number={5439},
+  volume={286},
   pages={509--512},
   year={1999},
-  publisher={American Association for the Advancement of Science}
 }
 @article{church1995poisson,
   title={Poisson mixtures},
@@ -348,26 +320,23 @@ publisher={JSTOR}
   number={02},
   pages={163--190},
   year={1995},
-  publisher={Cambridge Univ Press}
 }
 @incollection{clinchant2008bnb,
-  title={The BNB distribution for text modeling},
+  title={The {BNB} distribution for text modeling},
   author={Clinchant, St{\'e}phane and Gaussier, Eric},
   booktitle={Advances in Information Retrieval},
   pages={150--161},
   year={2008},
-  publisher={Springer}
 }
 @inproceedings{clinchant2010information,
-  title={Information-based models for ad hoc IR},
+  title={Information-based models for ad hoc {IR}},
   author={Clinchant, St{\'e}phane and Gaussier, Eric},
   booktitle={Proceedings of the 33rd international ACM SIGIR conference on Research and development in information retrieval},
   pages={234--241},
   year={2010},
-  organization={ACM}
 }
 
-@INPROCEEDINGS{AMMSB, crossref = {gopalan2013efficient} }
+@article{AMMSB, crossref = {gopalan2013efficient} }
 @article{gopalan2013efficient,
     title={Efficient discovery of overlapping communities in massive networks},
     author={Gopalan, Prem K and Blei, David M},
@@ -376,7 +345,6 @@ publisher={JSTOR}
     number={36},
     pages={14534--14539},
     year={2013},
-    publisher={National Acad Sciences}
 }
 @INPROCEEDINGS{MMM, crossref = {airoldi2014handbook} }
 @book{airoldi2014handbook,
@@ -393,7 +361,6 @@ publisher={JSTOR}
     number={1},
     pages={47},
     year={2002},
-    publisher={APS}
 }
 
 
@@ -418,7 +385,6 @@ publisher={JSTOR}
     number={5},
     pages={058701},
     year={2003},
-    publisher={APS}
 }
 @inproceedings{menon2011link,
     title={Link prediction via matrix factorization},
@@ -459,6 +425,40 @@ publisher={JSTOR}
     year={2009},
     publisher={SIAM}
 }
+
+@article{watts1998collective,
+  author = {Watts, Duncan J. and Strogatz, Steven H.},
+  journal = {Nature},
+  month = June,
+  number = 6684,
+  pages = {440--442},
+  title = {Collective dynamics of /`small-world/' networks},
+  volume = 393,
+  year = {1998}
+}
+
+@article{Blondel2008,                                                                                                                                                                        
+  author    = {Vincent D. Blondel and Jean{-}Loup Guillaume and Renaud Lambiotte and Etienne Lefebvre},
+  journal   = {Journal of statistical mechanics: theory and experiment},
+  title     = {Fast unfolding of community  in large networks},
+  year      = {2008},
+  volume    = {10},
+  pages = {P10008}
+}
+
+@article{largeron2015,
+    author = {Largeron, Christine AND Mougel, Pierre-Nicolas AND Rabbany, Reihaneh AND Za{\"\i}ane, Osmar R.},
+    journal = {PLoS ONE},
+    publisher = {Public Library of Science},
+    title = {Generating Attributed Networks with Communities},
+    year = {2015},
+    month = {04},
+    volume = {10},
+    url = {http://dx.doi.org/10.1371%2Fjournal.pone.0122777},
+    pages = {e0122777},
+    number = {4},
+    doi = {10.1371/journal.pone.0122777}
+}        
 @article{jacobs2014unified,
     title={A unified view of generative models for networks: models, methods, opportunities, and challenges},
     author={Jacobs, Abigail Z and Clauset, Aaron},
@@ -472,7 +472,6 @@ publisher={JSTOR}
     pages={657--664},
     year={2008}
 }
-
 @article{bickel2009nonparametric,
     title={A nonparametric view of network models and Newman--Girvan and other modularities},
     author={Bickel, Peter J and Chen, Aiyou},
@@ -482,11 +481,5 @@ publisher={JSTOR}
     pages={21068--21073},
     year={2009},
     publisher={National Acad Sciences}
-}
-@article{veitch2015class,
-    title={The class of random graphs arising from exchangeable random measures},
-    author={Veitch, Victor and Roy, Daniel M},
-    journal={arXiv preprint arXiv:1512.03099},
-    year={2015}
 }
 
