--- a/DSAA/a.bib
+++ b/DSAA/a.bib
@@ -560,3 +560,12 @@ publisher={JSTOR}
   pages     = {113--160},
   year      = {2012},
 } 
+@article{Aiello2012,
+ author = {Aiello, Luca Maria and Barrat, Alain and Schifanella, Rossano and Cattuto, Ciro and Markines, Benjamin and Menczer, Filippo},
+ title = {Friendship Prediction and Homophily in Social Media},
+ journal = {ACM Trans. Web},
+ volume = {6},
+ number = {2},
+ year = {2012},
+ pages = {1--33},
+} 
