--- a/DSAA/dsaa.tex
+++ b/DSAA/dsaa.tex
@@ -76,6 +76,16 @@ Several powerful relational learning models have been proposed to solve the prob
 
 Although drawn from a wide range of domains, real world social networks exhibit general properties. In this work, we focus on two important such properties, namely \textit{homophily} and \textit{preferential attachment} \cite{Newman2010,Barabasi2003}, and assess to which extent link prediction models, as the ones mentioned above, comply with them.
 
+// to complet ~\\
+
+For instance, we can mentioned the small world property which implies that most vertices can be reached from every other through a small number of edges or the community structure which appears when vertices are grouped in a way such that vertices in a group are more connected to vertices belonging to the same group compared to other vertices.
+ In this work, we focus on two other important properties, namely \textit{homophily} and \textit{preferential attachment} \cite{Newman2010, Barabasi2003}. Homophily is verified in a network when similar vertices according to their properties tend to be more connected than dissimilar vertices.  Preferential attachment states that a vertex is more likely to create connections with vertices having a high degree. The interest of these last properties has been widely emphasized in previous works notably for modeling and generating networks reflecting properties of real networks, like in the Barab\`asi-Albert model \cite{albert2002statistical} or Buckley and Osthus model \cite{Buckley2001} which integrate a preferential attachment mechanism
+
+// to complete ~\\
+
+The rest of this paper is organised as follows; in the second section we introduce the background models in the mixed-membership familly. In the third and fourth sections we introduce formal definitions of the compliance of probabilistic link prediction models to homophily and preferential attachment in social networks, and we study how those models comply or not with those properties.. In the fifth section we illustrate our findings on 2 synthetic networks and 2 real word networks. Finally, we conclude in the last section.
+
+
 \section{Related Work}
 
 %Burstiness on topic model:
@@ -85,19 +95,20 @@ Although drawn from a wide range of domains, real world social networks exhibit 
 
 %to read: Stochastic blockmodels and community structure in networks
 
-Recently,  several extensions of \imb ~and \ifm  ~have been proposed. In \cite{AMMSB}, the authors  proposes an adaptation of \imb, called a-MMSB where "a" stands for assortative,  and they used it for discovering overlapping communities in large size networks having millions of nodes since a-MMSB  scales well using stochastic variational inference. They constrained the weight matrix to have weights in the diagonal and a fixed small value elsewhere. A non parametric dynamic version of MMSB model has also been introduced to  handle temporal networks \cite{fan2015dynamic}. ILFM has also been extended in several way, to handle non-negative weights in \cite{IMRM} and within a more subtle latent feature structure in \cite{ILAM}. Nevertheless, the characterization of these models with regards to the properties of networks remains to be explored \cite{jacobs2014unified}.
+Recently,  several extensions of \imb ~and \ifm  ~have been proposed. In \cite{AMMSB}, the authors  proposes an adaptation of \imb, called a-MMSB where "a" stands for assortative,  and they used it for discovering overlapping communities in large size networks having millions of nodes since a-MMSB  scales well using stochastic variational inference. They constrained the weight matrix to have weights in the diagonal and a fixed small value elsewhere. A non parametric dynamic version of MMSB model has also been introduced to  handle temporal networks \cite{fan2015dynamic}. \ifm has also been extended in several way, to handle non-negative weights in \cite{IMRM} and within a more subtle latent feature structure in \cite{ILAM}. Nevertheless, the characterization of these models with regards to the properties of networks remains to be explored \cite{jacobs2014unified}.
 
-Indeed, Although drawn from a wide range of domains, real world social networks exhibit general properties.
-For instance, we can mentioned the small world property which implies that most vertices can be reached from every other through a small number of edges or the community structure which appears when vertices are grouped in a way such that vertices in a group are more connected to vertices belonging to the same group compared to other vertices.
- In this work, we focus on two other important properties, namely \textit{homophily} and \textit{preferential attachment} \cite{Newman2010, Barabasi2003}. Homophily is verified in a network when similar vertices according to their properties tend to be more connected than dissimilar vertices.  Preferential attachment states that a vertex is more likely to create connections with vertices having a high degree. The interest of these last properties has been widely emphasized in previous works notably for modeling and generating networks reflecting properties of real networks, like in the Barabási–Albert model \cite{albert2002statistical} or Buckley and Osthus model \cite{Buckley2001} which integrate a preferential attachment mechanism,  in the Multiplicative Attribute Graph (MAG) model \cite{Kim2012} which considers nodes affinities  or the Dancer model which takes in consideration both properties \cite{Largeron2017}.  They have also been exploited for improving the results obtained in classical tasks such as community detection \textbf{Ciglan2013,Zhang2016} or link prediction \textbf{Aiello2012,Zeng2016}. However, few works studied, in a theoretical way, in which extend the models comply these properties. Concerning the preferential attachment,  Lee \textit{et al.} \cite{Lee2015} analytically prove that their random model preserves the power law behavior and, they also  show that it satisfies the small world property whereas  Orbanz and Royhowever pointed out that models belonging to the family of infinitely exchangeable Bayesian graph models cannot generate power law degree distributions among the vertices \cite{orbanz2015bayesian}.  Concerning the homophily effect, \cite{Hoff2008} pointed out that the latent eigen model can model both homophily and stochastic equivalence in undirected graphs but without providing a formal definitions of these properties. Furthermore, according to Wu \textit{et al.}, the latent eigen model for directed graphs, MLFM, fails to model homophily in networks and, for enhancing homophily modeling
-in MLFM, these last ones designed the  GLFM model \cite{Li11}.
-In this article,  we study in a theoretical way, how the non-parametric versions \ifm and  \imb of these classical stochastic mixed membership models handle homophily and preferential attachment. For this purpose, we introduce formal definitions of these phenomena and then study how the models relate to these definitions.
+In the Multiplicative Attribute Graph (MAG) model \cite{Kim2012} which considers nodes affinities  or the Dancer model which takes in consideration both properties \cite{Largeron2017} but this model do not belong to the family of Bayesian models considered in this article. These properties has also  been exploited for improving the results obtained in classical tasks such as community detection \cite{Ciglan2013,Zhang2016} or link prediction \cite{Aiello2012,Zeng2016}. However, few works studied, in a theoretical way, in which extend the models comply these properties.
 
+Concerning the preferential attachment, Orbanz and Royhowever pointed out that models belonging to the family of infinitely exchangeable Bayesian graph models cannot generate sparse networks which not compatible with power law degree distribution among the vertices \cite{orbanz2015bayesian}. By relaxing the exchangeability assumptions, Lee \textit{et al.} \cite{Lee2015} analytically prove that their random model preserves the power law behavior and show that it satisfies the small world property. However the complexity of the model makes it hard to use in practice.
+
+Concerning the homophily effect, \cite{hoff2008modeling} pointed out that the latent eigen model can comply both homophily and stochastic equivalence in undirected graphs but without providing a formal definitions of these properties. Furthermore, according to Lee \textit{et al.}, the latent eigen model, MLFM, for directed graphs fails to model homophily  and, for enhancing homophily modeling in MLFM, these last ones designed the  GLFM model \cite{Li11}.
+
+In this article,  we study in a theoretical way, how the non-parametric versions \ifm ~ and  \imb ~ of these classical stochastic mixed membership models handle homophily and preferential attachment. For this purpose, we introduce formal definitions of these phenomena and then study how the models relate to these definitions.
 
 %Theoretical results on the structure of random graph under exchangeability assumptions are however well reported in \cite{orbanz2015bayesian}, although the characterization of social networks properties within a Bayesian framework is not covered. In \cite{hoff2008modeling}, the role of exchangeability was first pointed out and its relation to the data representation where they provide a comparative study of the homophily and structural equivalence in different model settings, but without a formal definition of both. An other important mention of the exchangeability assumptions, was done in \cite{bickel2009nonparametric} where they characterize the asymptotic comportment of the likelihood in the blockmodel settings, showing that the inference of the likelihood lead to a consistent estimation of the community structure. But they only cover the case a single membership.
 %
 
-The rest of this paper is organised as follows; In the second section we introduce the background models in the mixed-membership familly. In the third and fourth section we introduce formal definitions of the compliance of probabilistic link prediction models to homophily and preferential attachment in social networks, and show that standard stochastic mixed membership models \ref{fig:mmm} comply with homophily with the similarity that underlies them. For preferential attachment, the situation is more contrasted: if these models do not comply with global preferential attachment, their compliance to local preferential attachment depends on whether the memberships to latent factors are hard or soft, and in the latter case on whether the underlying latent factor distribution is bursty or not. In the fifth section we illustrate our findings on 2 synthetic networks and 2 real word networks. Finally, we conclude in the last section.
+
 
 \section{Backround Models}
 
